--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,9 @@
 2001-12-09  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
+	* vmsdbg.h: Delete spurious close-comment.
+	(DST_HEADER): Fix typo in ENUM_BITFIELD parameter.
+	* vmsdbgout.c (write_modbeg): Define return type.
+
 	* m68k/3b1.h (ASM_OUTPUT_ALIGN): Wrap in do-while(0).
 	* m68k/amix.h (ASM_GENERATE_INTERNAL_LABEL): Likewise.
 	* m68k/atari.h (ASM_GENERATE_INTERNAL_LABEL): Likewise.
