--- a/gcc/config/1750a/1750a.md
+++ b/gcc/config/1750a/1750a.md
@@ -693,6 +693,8 @@
        case 4:
          istr = \"dv  \";
          break;
+       default:
+         abort();
       }
       return mod_regno_adjust (istr, operands);
      }")
