--- a/gcc/config/ia64/ia64.md
+++ b/gcc/config/ia64/ia64.md
@@ -5057,14 +5057,18 @@
   ""
 {
   static const char * const alt[2][4] = {
-    "lfetch.nta [%0]",
-    "lfetch.nt1 [%0]",
-    "lfetch.nt2 [%0]",
-    "lfetch [%0]",
-    "lfetch.excl.nta [%0]",
-    "lfetch.excl.nt1 [%0]",
-    "lfetch.excl.nt2 [%0]",
-    "lfetch.excl [%0]"
+    {
+      "lfetch.nta [%0]",
+      "lfetch.nt1 [%0]",
+      "lfetch.nt2 [%0]",
+      "lfetch [%0]"
+    },
+    {
+      "lfetch.excl.nta [%0]",
+      "lfetch.excl.nt1 [%0]",
+      "lfetch.excl.nt2 [%0]",
+      "lfetch.excl [%0]"
+    }
   };
   int i = (INTVAL (operands[1]));
   int j = (INTVAL (operands[2]));
