--- a/gcc/testsuite/ChangeLog
+++ b/gcc/testsuite/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-09  Nathan Sidwell  <nathan@codesourcery.com>
+
+	* g++.dg/other/copy1.C: New test.
+
 2001-10-08  Aldy Hernandez  <aldyh@redhat.com>
 
         * gcc.c-torture/execute/builtin-types-compatible-p.c: New.
