2001-12-09  Daniel Berlin  <dan@cgsoftware.com>
	* config/rs6000/rs6000.h (enum rs6000_builtins): Add remaining
	altivec builtins (VCF?X, VCT?XS, VSEL, V*EFP, VRFI*).

	* config/rs6000/rs6000.c: Ditto.

	* config/rs6000/rs6000.md: Ditto.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47814 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,12 @@
+2001-12-09  Daniel Berlin  <dan@cgsoftware.com>
+
+	* config/rs6000/rs6000.h (enum rs6000_builtins): Add remaining
+	altivec builtins (VCF?X, VCT?XS, VSEL, V*EFP, VRFI*).
+
+	* config/rs6000/rs6000.c: Ditto.
+
+	* config/rs6000/rs6000.md: Ditto.
+
 2001-12-09  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
 	* 1750a.md: Add default case in switch.
