--- a/gcc/ChangeLog.3
+++ b/gcc/ChangeLog.3
@@ -2667,7 +2667,7 @@ Thu May 25 02:09:10 2000  J"orn Rennecke <amylaar@cygnus.co.uk>
 2000-05-24  Mark Mitchell  <mark@codesourcery.com>
 
 	* calls.c (expand_call): Handle cleanups in tail-recursion
-	arguments analagously to cleanups in sibling calls.
+	arguments analogously to cleanups in sibling calls.
 
 2000-05-24  Kaveh R. Ghazi  <ghazi@caip.rutgers.edu>
 
