Update my email address
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47817 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-09  Zack Weinberg  <zack@codesourcery.com>
+
+	* MAINTAINERS: Update my email address.
+
 2001-12-07  Turly O'Connor  <turly@apple.com>
 	* MAINTAINERS (Write After Approval): Add myself.
 	* rs6000.c (rs6000_trampoline_size): Handle ABI_DARWIN case.
