--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,11 @@
+2001-12-09  Richard Henderson  <rth@redhat.com>
+
+	* config/alpha/alpha.c (alpha_align_insns): Use align_functions,
+	not FUNCTION_BOUNDARY.
+	* config/alpha/alpha.h (TRAMPOLINE_ALIGNMENT): New.
+	* config/alpha/alpha32.h, config/alpha/vms.h: Likewise.
+	* config/alpha/unicosmk.h (FUNCTION_BOUNDARY): Remove.
+
 2001-12-09  Hans-Peter Nilsson  <hp@bitrange.com>
 
 	* config/mmix/mmix.c (mmix_function_block_profiler,
