--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,5 +1,10 @@
 2001-12-09  Richard Henderson  <rth@redhat.com>
 
+	* config/alpha/alpha.c (alpha_align_insns): Suppress realignment
+	immediately after a call; insert nops before a call.
+
+2001-12-09  Richard Henderson  <rth@redhat.com>
+
 	* config/alpha/alpha.c (alpha_align_insns): Use align_functions,
 	not FUNCTION_BOUNDARY.
 	* config/alpha/alpha.h (TRAMPOLINE_ALIGNMENT): New.
