* check-init.c (check_init): Don't allow pre- or post- increment 	or decrement of final variable. 	(final_assign_error): Minor error message rewording.
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47821 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/java/ChangeLog
+++ b/gcc/java/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-09  Tom Tromey  <tromey@redhat.com>
+
+	* check-init.c (check_init): Don't allow pre- or post- increment
+	or decrement of final variable.
+	(final_assign_error): Minor error message rewording.
+
 2001-12-08  Tom Tromey  <tromey@redhat.com>
 
 	* java-tree.h: Fixed typo.
