--- a/libjava/testsuite/ChangeLog
+++ b/libjava/testsuite/ChangeLog
@@ -1,3 +1,8 @@
+2001-12-09  Bryce McKinlay  <bryce@waitaki.otago.ac.nz>
+
+	* libjava.lang/PR3731.out: Adjust output to reflect that "instanceof"
+	shouldn't trigger class initialization.
+
 2001-12-06  Tom Tromey  <tromey@redhat.com>
 
 	* libjava.compile/BlankFinal.java: Removed; incorrect test.
