--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-09  Richard Henderson  <rth@redhat.com>
+
+	* cfgcleanup.c (label_is_jump_target_p): New function.
+	(try_optimize_cfg): Use label_is_jump_target_p to check if label is
+	target of a JUMP_INSN from the preceding block.
+
 Sun Dec  9 18:40:07 2001  Douglas B. Rupp  <rupp@gnat.com>
 
 	* vmsdbgout.c (lookup_filename): Assign null string instead
