--- a/gcc/doc/invoke.texi
+++ b/gcc/doc/invoke.texi
@@ -8575,8 +8575,8 @@ These @samp{-m} options are defined for the DEC Alpha/VMS implementations:
 @table @gcctabopt
 @item -mvms-return-codes
 @opindex mvms-return-codes
-Return VMS condition codes from main. The default is to return POSIX
-style condition (e.g. error) codes.
+Return VMS condition codes from main.  The default is to return POSIX
+style condition (e.g.@ error) codes.
 @end table
 
 @node Clipper Options
