--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,7 @@
+Mon Dec 10 06:15:44 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
+
+	* vmsdbgout.c (lookup_filename): Remove warning.
+
 Mon Dec 10 06:09:57 2001  Douglas B. Rupp  <rupp@gnat.com>
 
 	* config.gcc (alpha*-dec-vms*): Change to alpha*-dec-*vms*
