* doc/cpp.texi: Don't condition menus on @ifinfo.  Condition the 	copyright notice formerly conditioned on @ifinfo on @ifnottex 	instead.
f:
	* g77.texi: Don't condition menus on @ifinfo.

ch:
	* chill.texi: Don't condition menus on @ifinfo.


git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47842 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/doc/cpp.texi
+++ b/gcc/doc/cpp.texi
@@ -69,7 +69,6 @@ This manual contains no Invariant Sections.  The Front-Cover Texts are
 @contents
 @page
 
-@ifinfo
 @node Top
 @top
 The C preprocessor implements the macro language used to transform C,
@@ -171,9 +170,10 @@ Obsolete Features
 @end detailmenu
 @end menu
 
+@ifnottex
 @copyrightnotice{}
 @covertexts{}
-@end ifinfo
+@end ifnottex
 
 @node Overview
 @chapter Overview
