--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -1,3 +1,9 @@
+2001-12-10  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* doc/cpp.texi: Don't condition menus on @ifinfo.  Condition the
+	copyright notice formerly conditioned on @ifinfo on @ifnottex
+	instead.
+
 Mon Dec 10 06:15:44 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 	* vmsdbgout.c (lookup_filename): Remove warning.
