--- a/gcc/ch/ChangeLog
+++ b/gcc/ch/ChangeLog
@@ -1,3 +1,7 @@
+2001-12-10  Joseph S. Myers  <jsm28@cam.ac.uk>
+
+	* chill.texi: Don't condition menus on @ifinfo.
+
 2001-12-04  Zack Weinberg  <zack@codesourcery.com>
 
 	* Makefile.in: Don't set ALL.  Delete @cross_defines@,
