* Makefile.in: Add $(OUTPUT_OPTION) to compilation rules. 	* intl/Makefile.in (OUTPUT_OPTION): Add configure variable. 	(.c.o): Add $(OUTPUT_OPTION). 	* java/Make-lang.in (jvspec.o): Add $(OUTPUT_OPTION).
git-svn-id: svn://gcc.gnu.org/svn/gcc/trunk@47843 138bc75d-0d04-0410-961f-82ee72b054a4

--- a/gcc/ChangeLog
+++ b/gcc/ChangeLog
@@ -10,6 +10,8 @@ Mon Dec 10 06:15:44 2001  Richard Kenner  <kenner@vlsi1.ultra.nyu.edu>
 
 Mon Dec 10 06:09:57 2001  Douglas B. Rupp  <rupp@gnat.com>
 
+	* Makefile.in: Add $(OUTPUT_OPTION) to compilation rules.
+
 	* config.gcc (alpha*-dec-vms*): Change to alpha*-dec-*vms*
 	(exeext, target_alias, prefix, local_prefix): Define.
 	* config/alpha/x-vms (USE_COLLECT2): Make empty.
